<resources>
    <string name="app_name">DataBuckets</string>
    <string name="choose_a_bucket">Choose a Bucket!</string>
    <string name="add_new_bucket">Add new Bucket</string>
    <string name="add_new_entry_to_bucket">Add new Entry to Bucket</string>
    <string name="description">Description</string>
    <string name="last_item_remove">The last item cannot be removed</string>
    <string name="name">Name</string>
    <string name="show_entries">Show Entries</string>
    <string name="data_analysis">Data Analysis</string>
    <string name="title">Title</string>
    <string name="save_to_dropbox">Save to Dropbox</string>
    <string name="configure_a_new_bucket">Configure a new bucket</string>
    <string name="add">Add</string>
    <string name="timestamp">Timestamp</string>
    <string name="action_import">Import Data</string>
    <string name="action_export">Export Data</string>
    <string name="action_delete_bucket">Delete Bucket</string>
    <string name="delete_bucket_confirmation">Are you sure you want to delete this bucket?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string-array name="item_types">
        <item>Text</item>
        <item>Number</item>
    </string-array>
</resources>